Minor changes added

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 #
 .DS_Store
 **/.DS_Store
+firestore.indexes.json                                                                                                  
+firestore.rules                                                                                                         
+functions/.eslintrc.json                                                                                                
+functions/node_modules/                                                                                                 
+functions/package-lock.json                                                                                             
+node_modules/                                                                                                           
+storage.rules 
+functions/node_modules/
