--- a/functions/package.json
+++ b/functions/package.json
@@ -6,5 +6,11 @@
     "firebase-functions": "^1.0.1",
     "nodemailer": "^4.0.1"
   },
-  "private": true
+  "scripts": {
+    "lint": "eslint"
+  },
+  "private": true,
+  "devDependencies": {
+    "eslint": "^4.19.1"
+  }
 }
