--- a/functions/package.json
+++ b/functions/package.json
@@ -2,6 +2,7 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
+    "cors": "^2.8.4",
     "firebase-admin": "^5.11.0",
     "firebase-functions": "^1.0.1",
     "nodemailer": "^4.0.1"
